# libml

./: .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile
include/libml/: ml.hpp
include/libml/private/: details.hpp
include/libml/svd_classification/: svd_classifier.hpp
include/libml/svd_classifier/: projection.hpp  svd_classifier.hpp
include/ml/: svd_predictor.h  svd_predictor_utils.h
scr/: CMakeLists.txt
tests/: CMakeLists.txt  svd_predictor.test.cpp  test.projection.cpp  test.svd_classifier.cpp
